--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title></title>
+		<title>GDS - The Book</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
@@ -30,9 +30,6 @@
                                  
                 <section id="building-geographic-data-science" class="slide level1">
                 <h1>Building “Geographic Data Science…”</h1>
-                <CENTER>
-                <em>Universidad de Salta</em>
-                </CENTER>
                 <CENTER>
                 <a href="http://darribas.org"><b>Dani Arribas-Bel</b></a> <a href="http://twitter/com/darribas">[<code>@darribas</code>]</b></a>
                 </CENTER>
@@ -322,30 +319,13 @@
                 </center>
                 </section>
                 </section>
-                <section id="building-geographic-data-science-1" class="slide level1">
-                <h1>Building “Geographic Data Science…”</h1>
-                <CENTER>
-                <em>Universidad de Salta</em>
-                </CENTER>
-                <CENTER>
-                <a href="http://darribas.org"><b>Dani Arribas-Bel</b></a> <a href="http://twitter/com/darribas">[<code>@darribas</code>]</b></a>
-                </CENTER>
-                <table>
-                <col width="33%">
-                <col width="33%">
-                <col width="33%">
-                <tr>
-                <td>
-                <img src="fig/logo.png" style="width:300px;vertical-align:middle">
-                </td>
-                <td>
-                <img src="fig/ati_logo.png" style="width:300px;vertical-align:middle">
-                </td>
-                <td>
-                <img src="fig/gdsl.png" style="width:300px;vertical-align:middle">
-                </td>
-                </tr>
-                </table>
+                <section id="section-7" class="slide level1">
+                <h1></h1>
+                <section id="section-8" class="level2">
+                <h2></h2>
+                <p><a href="./index.pdf">[<code>PDF</code> version of these slides]</a></p>
+                <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"> GDS - The Book </span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+                </section>
                 </section>
 			</div>
 		</div>
